--- a/src/main/resources/templates/admin/operators/list.html
+++ b/src/main/resources/templates/admin/operators/list.html
@@ -168,7 +168,10 @@
         <div class="row">
             <div class="col-md-8">
                 <h6 style="color: var(--arknights-white);">
-                    <i class="bi bi-controller me-2"></i>Talos-II Archive Admin
+                    <img src="/images/logo.png" alt="Arknights Logo"
+                         style="height: 20px; width: auto; filter: brightness(0) invert(1);"
+                         class="me-2">
+                    Talos-II Archive Admin
                 </h6>
                 <p class="mb-0 small" style="color: var(--arknights-white);">Operators Management Panel</p>
             </div>
