Updated potential icons

--- a/src/main/resources/templates/admin/operators/create.html
+++ b/src/main/resources/templates/admin/operators/create.html
@@ -300,7 +300,9 @@
 
                 <div class="potential-input-group">
                     <div class="potential-header">
-                        <div class="potential-number">1</div>
+                        <div class="potential-icon">
+                            <img src="/images/potential/p1.png" alt="Potential" class="potential-icon-img">
+                        </div>
                         <h4 class="potential-title">Potential 1</h4>
                     </div>
                     <div class="row">
@@ -319,7 +321,9 @@
 
                 <div class="potential-input-group">
                     <div class="potential-header">
-                        <div class="potential-number">2</div>
+                        <div class="potential-icon">
+                            <img src="/images/potential/p2.png" alt="Potential" class="potential-icon-img">
+                        </div>
                         <h4 class="potential-title">Potential 2</h4>
                     </div>
                     <div class="row">
@@ -338,7 +342,9 @@
 
                 <div class="potential-input-group">
                     <div class="potential-header">
-                        <div class="potential-number">3</div>
+                        <div class="potential-icon">
+                            <img src="/images/potential/p3.png" alt="Potential" class="potential-icon-img">
+                        </div>
                         <h4 class="potential-title">Potential 3</h4>
                     </div>
                     <div class="row">
@@ -357,7 +363,9 @@
 
                 <div class="potential-input-group">
                     <div class="potential-header">
-                        <div class="potential-number">4</div>
+                        <div class="potential-icon">
+                            <img src="/images/potential/p4.png" alt="Potential" class="potential-icon-img">
+                        </div>
                         <h4 class="potential-title">Potential 4</h4>
                     </div>
                     <div class="row">
@@ -376,7 +384,9 @@
 
                 <div class="potential-input-group">
                     <div class="potential-header">
-                        <div class="potential-number">5</div>
+                        <div class="potential-icon">
+                            <img src="/images/potential/p5.png" alt="Potential" class="potential-icon-img">
+                        </div>
                         <h4 class="potential-title">Potential 5</h4>
                     </div>
                     <div class="row">
