--- a/src/main/resources/templates/admin/operators/edit.html
+++ b/src/main/resources/templates/admin/operators/edit.html
@@ -305,7 +305,9 @@
 
                 <div class="potential-input-group">
                     <div class="potential-header">
-                        <div class="potential-number">1</div>
+                        <div class="potential-icon">
+                            <img src="/images/potential/p1.png" alt="Potential" class="potential-icon-img">
+                        </div>
                         <h4 class="potential-title">Potential 1</h4>
                     </div>
                     <div class="row">
@@ -324,7 +326,9 @@
 
                 <div class="potential-input-group">
                     <div class="potential-header">
-                        <div class="potential-number">2</div>
+                        <div class="potential-icon">
+                            <img src="/images/potential/p2.png" alt="Potential" class="potential-icon-img">
+                        </div>
                         <h4 class="potential-title">Potential 2</h4>
                     </div>
                     <div class="row">
@@ -343,7 +347,9 @@
 
                 <div class="potential-input-group">
                     <div class="potential-header">
-                        <div class="potential-number">3</div>
+                        <div class="potential-icon">
+                            <img src="/images/potential/p3.png" alt="Potential" class="potential-icon-img">
+                        </div>
                         <h4 class="potential-title">Potential 3</h4>
                     </div>
                     <div class="row">
@@ -362,7 +368,9 @@
 
                 <div class="potential-input-group">
                     <div class="potential-header">
-                        <div class="potential-number">4</div>
+                        <div class="potential-icon">
+                            <img src="/images/potential/p4.png" alt="Potential" class="potential-icon-img">
+                        </div>
                         <h4 class="potential-title">Potential 4</h4>
                     </div>
                     <div class="row">
@@ -381,7 +389,9 @@
 
                 <div class="potential-input-group">
                     <div class="potential-header">
-                        <div class="potential-number">5</div>
+                        <div class="potential-icon">
+                            <img src="/images/potential/p5.png" alt="Potential" class="potential-icon-img">
+                        </div>
                         <h4 class="potential-title">Potential 5</h4>
                     </div>
                     <div class="row">
